Added album art placeholder for currently playing track

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -38,6 +38,13 @@
 	padding: 12px 16px;
 }
 
+.now-playing__album-icon {
+  display: flex;
+  height: 64px;
+  width: 64px;
+  background-color: #dbdedf;
+}
+
 .upcoming-songs li {
 	padding: 12px;
 }
