--- a/client/src/components/App.scss
+++ b/client/src/components/App.scss
@@ -1,7 +1,6 @@
 .app {
 	display: flex;
 	flex-direction: column;
-	text-align: center;
 }
 
 .App-logo {
@@ -32,38 +31,32 @@
 	min-width: 200px;
 	background-color: #20c0a011;
 	border-radius: 0 12px 12px 0;
-}
-
-.now-playing {
-	padding: 12px 16px;
-}
-
-.now-playing__album-icon {
-  display: flex;
-  height: 64px;
-  width: 64px;
-  background-color: #dbdedf;
-}
-
-.upcoming-songs li {
 	padding: 12px;
-}
 
-.controls {
-	display: flex;
-	flex-direction: row;
-	column-gap: 8px;
-	padding: 12px;
-}
+	.upcoming-songs {
+		display: flex;
+		flex-direction: column;
+		row-gap: 8px;
+		margin: 0;
+		padding: 12px 12px 12px 36px;
+	}
 
-.controls button {
-	border-radius: 24px;
-	height: 48px;
-	width: 48px;
-	background-color: #282c34;
-	border: none;
-	color: #fff;
-	cursor: pointer;
+	.controls {
+		flex-direction: row;
+		justify-content: center;
+		column-gap: 8px;
+		padding: 12px;
+
+		button {
+			border-radius: 24px;
+			height: 48px;
+			width: 48px;
+			background-color: #282c34;
+			border: none;
+			color: #fff;
+			cursor: pointer;
+		}
+	}
 }
 
 @keyframes App-logo-spin {
